--- a/leapyear.html
+++ b/leapyear.html
@@ -14,7 +14,7 @@
         if(isDivisible100){
             let isDivisible400 = year % 400 ==0;
             if(isDivisible400){
-                isLeapyear = true;
+                isLeapyear = true;//
             }else {
                 isLeapyear = true;
             }
